--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  padding: 50px 0;
 }
 
 .canvas {
