--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@ body {
   width: 700px;
   height: 700px;
   border-radius: 15px;
+  background-color: "#fff";
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   margin-left: 100px;
 }
@@ -27,8 +28,10 @@ body {
   margin-bottom: 30px;
 }
 
-.controls__btns button {
+.controls__btns button,
+a {
   all: unset;
+  display: inline-block;
   cursor: pointer;
   background-color: white;
   padding: 5px 0px;
